# serializer-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  attrcontainer.hpp  main.cpp  serializable.hpp  serializer.hpp  stringifiable.hpp  stringifier.hpp
.github/workflows/: cmake-single-platform.yml
doc/: doc-conf
serializer/: attrcontainer.hpp  concepts.hpp  convertor.hpp  exceptions.hpp  handlers.hpp  member_list.hpp  metafunctions.hpp  parser.cpp  parser.hpp  serializable.hpp  serialize.hpp  serializer.hpp  types.hpp  utils.hpp
serializer/convertor/: convert.hpp  convertor.hpp
serializer/exceptions/: abstract_type.hpp  create_type.hpp  id_not_found.hpp  unknown_specialized_type.hpp  unsupported_type.hpp
serializer/meta/: concepts.hpp  serializer_meta.hpp  type_check.hpp  type_transform.hpp
serializer/serializer/: serialize.hpp  serializer.hpp
serializer/tools/: bytes.hpp  c_struct.hpp  concepts.hpp  context.hpp  dynamic_array.hpp  id_table.hpp  macros.hpp  metafunctions.hpp  ml_arg_type.hpp  super.hpp  tools.hpp  type_table.hpp  vec.hpp
test/: catch.hpp  test.cpp  test_parser.cpp
test-classes/: abstract.hpp  composed.hpp  cstruct.h  hedgehog.hpp  multipleinheritance.hpp  polymorphic.hpp  simple.hpp  tree.hpp  withMap.hpp  withPair.hpp  withSmartPtr.hpp  withcontainer.hpp  withconvertor.hpp  withcstruct.hpp  withdynamicarrays.hpp  withenums.hpp  withfunctions.hpp  withmap.hpp  withpair.hpp  withpointers.hpp  withserializer.hpp  withset.hpp  withsmartptr.hpp  withstaticarrays.hpp  withstring.hpp  withtuple.hpp
